--- a/1_Zadania/Dzień_1/3_Tablice/index.html
+++ b/1_Zadania/Dzień_1/3_Tablice/index.html
@@ -5,6 +5,8 @@
     <title>CodersLab</title>
 </head>
 <body>
-
+    <!--<script src="js/debug.js"></script>-->
+    <!--<script src="js/zadanie1.js"></script>-->
+    <script src="js/zadanie8.js"></script>
 </body>
 </html>
