--- a/1_Zadania/Dzień_1/2_Funkcje/index.html
+++ b/1_Zadania/Dzień_1/2_Funkcje/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
 
+<!--<script src="js/zadanie1.js"></script>-->
+<!--<script src="js/zadanie2.js"></script>-->
+<!--<script src="js/zadanie3.js"></script>-->
+<!--<script src="js/zadanie3.js"></script>-->
+<script src="js/zadanie4.js"></script>
+
+
 </body>
 </html>
