--- a/1_Zadania/Dzień_3/1_Eventy/zadanie02.html
+++ b/1_Zadania/Dzień_3/1_Eventy/zadanie02.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CodersLab</title>
+    <script type="application/javascript" src="js/zadanie02.js"></script>
 </head>
 <body>
 <div id="bubblingButtons">
