update day 3 ex p1

--- a/1_Zadania/Dzień_3/1_Eventy/zadanie04.html
+++ b/1_Zadania/Dzień_3/1_Eventy/zadanie04.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-      <title>CodersLab</title>
+    <title>CodersLab</title>
+    <script type="application/javascript" src="js/zadanie04.js"></script>
 </head>
 <body>
 
