--- a/1_Zadania/Dzień_3/1_Eventy/zadanie05.html
+++ b/1_Zadania/Dzień_3/1_Eventy/zadanie05.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CodersLab</title>
 </head>
+<script type="application/javascript" src="js/zadanie05.js"></script>
 <body>
 
 <button id="button1">Guzik 1</button>
