end of day 3 exs 1

--- a/1_Zadania/Dzień_3/1_Eventy/zadanie07.html
+++ b/1_Zadania/Dzień_3/1_Eventy/zadanie07.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-      <title>CodersLab</title>
+    <title>CodersLab</title>
     <link rel="stylesheet" href="style/style.css">
+    <script type="application/javascript" src="js/zadanie07.js"></script>
 </head>
 <body>
 
 <div class="box big" id="box"></div>
 
-Polożenie myszki:
-Globalne: X: <span id="globalX"></span>
-Globalne: Y: <span id="globalY"></span>
-Lokalne: X: <span id="localX"></span>
-Lokalne: Y: <span id="localY"></span>
+Polożenie myszki:<br>
+Globalne: X: <span id="globalX"></span><br>
+Globalne: Y: <span id="globalY"></span><br>
+Lokalne: X: <span id="localX"></span><br>
+Lokalne: Y: <span id="localY"></span><br>
 </body>
 
 </html>
