--- a/1_Zadania/Dzień_3/1_Eventy/zadanie09.html
+++ b/1_Zadania/Dzień_3/1_Eventy/zadanie09.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>CodersLab</title>
     <link rel="stylesheet" href="style/style.css">
+    <script type="application/javascript" src="js/zadanie09.js"></script>
+
 </head>
 <body>
 
-Wielkość okna:
-Szerokość: <span id="windowWidth"></span>
+Wielkość okna:<br><br>
+Szerokość: <span id="windowWidth"></span><br>
 Wysokość: <span id="windowHeight"></span>
 
 </body>
