end of day.3 p.1

--- a/1_Zadania/Dzień_3/2_Poruszanie_po_DOM/zadanie02.html
+++ b/1_Zadania/Dzień_3/2_Poruszanie_po_DOM/zadanie02.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>COdersLab</title>
+    <title>CodersLab</title>
     <link rel="stylesheet" href="style/style.css">
+    <script type="application/javascript" src="js/zadanie02.js"></script>
 </head>
 <body>
 
