--- a/1_Zadania/Dzień_3/2_Poruszanie_po_DOM/zadanie04.html
+++ b/1_Zadania/Dzień_3/2_Poruszanie_po_DOM/zadanie04.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CodersLab</title>
+    <script src="js/zadanie04.js" type="application/javascript"></script>
 </head>
 <body>
 
